--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -302,6 +302,8 @@ pipelines:
                 - mkdir -p ~/.ssh
                 - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
                 - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
+                - eval "$(ssh-agent)"
+                - ssh-add ~/.ssh/id_rsa
                 - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
                 - cd quickstarts
                 - cp -r ./ci/jira/* ./${QS_PROJECT_NAME}/ci/
@@ -333,6 +335,8 @@ pipelines:
                 - mkdir -p ~/.ssh
                 - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
                 - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
+                - eval "$(ssh-agent)"
+                - ssh-add ~/.ssh/id_rsa
                 - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
                 - cd quickstarts
                 - cp -r ./ci/confluence/* ./${QS_PROJECT_NAME}/ci/
@@ -364,6 +368,8 @@ pipelines:
                 - mkdir -p ~/.ssh
                 - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
                 - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
+                - eval "$(ssh-agent)"
+                - ssh-add ~/.ssh/id_rsa
                 - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
                 - cd quickstarts
                 - cp -r ./ci/bitbucket/* ./${QS_PROJECT_NAME}/ci/
